feat: all required pages created

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,9 +15,14 @@
     "lucide",
     "noyonalways",
     "reduxjs",
+    "Roboto",
+    "signin",
+    "signup",
+    "singup",
     "smastrom",
     "sonner",
     "Swiper",
-    "tailwindcss"
+    "tailwindcss",
+    "tseslint"
   ]
 }
