feat: add redux-toolkit

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,13 +9,16 @@
   "files.autoSave": "off",
   "cSpell.words": [
     "Allreview",
+    "autoplay",
     "Campgears",
     "clsx",
+    "embla",
     "hookform",
     "IMGBB",
     "lucide",
     "newslatter",
     "noyonalways",
+    "persistor",
     "reduxjs",
     "rentgo",
     "Roboto",
