--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.441.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
